Fix Product alignment is wrong in product lists for smaller devices

--- a/themes/classic/_dev/css/components/featuredproducts.scss
+++ b/themes/classic/_dev/css/components/featuredproducts.scss
@@ -6,6 +6,9 @@ $product-description-height: 70px;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
+    @include media-breakpoint-down(sm) {
+      justify-content: center;
+    }
   }
   .product-thumbnail {
     display: block;
